--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,41 @@
 body {
     background-color: rgb(211, 211, 211);
+    height: 125vh;
+    font-family: sans-serif;
+    margin: 0;
+    margin-top: 0px;
+    padding: 0;
   }
   
-  h1 {
+h1 {
     color: navy;
-    margin-left: 20px;
+    margin-left: 100px;
+    position: fixed;
+    height: 50px;
+    line-height: 20px;
+    display: flex;
+    height: 50px;
   }
+
+h2 {
+    margin-top: 0px;
+}
+
+section {
+    height: 100vh;
+    border: 0px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+        
+}
+
+
+
+
